<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash_gradient_color">


    <LinearLayout
        android:id="@+id/llParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:src="@drawable/line"/>

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/app_icon"
            android:visibility="visible"/>

        <com.patondekarjewellers.custom_views.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@mipmap/username"/>

            <com.patondekarjewellers.custom_views.CustomEditViewRegular
                android:id="@+id/etUsername"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/fullname"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_drawable"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryDark"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@mipmap/mail"/>

            <com.patondekarjewellers.custom_views.CustomEditViewRegular
                android:id="@+id/etEmail"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_drawable"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@mipmap/phone"/>

            <com.patondekarjewellers.custom_views.CustomEditViewRegular
                android:id="@+id/etPhone"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/phone"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="10"
                android:textCursorDrawable="@drawable/cursor_drawable"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@mipmap/city"/>

            <com.patondekarjewellers.custom_views.CustomEditViewRegular
                android:id="@+id/etCity"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/city"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_drawable"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@mipmap/city"/>

            <com.patondekarjewellers.custom_views.CustomEditViewRegular
                android:id="@+id/etShopName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/shop_name"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_drawable"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryDark"/>

        <com.patondekarjewellers.custom_views.CustomButtonBold
            android:id="@+id/btnSignUp"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/rounded_button"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="@dimen/_16sdp"/>


    </LinearLayout>


</ScrollView>
