<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cvGoldSpot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            app:cardBackgroundColor="@color/colorTransperent"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.patondekarjewellers.custom_views.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/about_jewellers"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />


                <com.patondekarjewellers.custom_views.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/director_two"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/colorGold" />

                <com.patondekarjewellers.custom_views.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/director_one"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24sdp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/line" />

        </RelativeLayout>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>